--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <title>StarGuide | EDA Hihi 2018</title>
+    <title>NightGuide | EDA Hihi 2018</title>
   </head>
   <body>
     <noscript
